# template_repo

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml
src/template_repo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test.py
